Fix image being collapsed

--- a/src/components/common/TextRow/index.scss
+++ b/src/components/common/TextRow/index.scss
@@ -7,7 +7,6 @@
   }
 
   img {
-    margin-left: 30px;
     width: 200px;
     height: 200px;
     display: block;
